Fix sizing + spacing (development version was zoomed in, lol).

--- a/sass/_create.scss
+++ b/sass/_create.scss
@@ -23,7 +23,7 @@
 
 .create-blurb {
     text-align: right;
-    font-size: 22px;
+    font-size: 25px;
     font-family: "din-condensed-web";
     color: #F4B6A4;
     letter-spacing: 1px;
