--- a/sass/_distort.scss
+++ b/sass/_distort.scss
@@ -21,7 +21,7 @@
 }
 
 .distort-blurb {
-    font-size: 22px;
+    font-size: 25px;
     font-family: "din-condensed-web";
     color: #F4B6A4;
     letter-spacing: 1px;
