--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -10,7 +10,7 @@
 }
 
 .footer-blurb {
-    font-size: 22px;
+    font-size: 25px;
     font-family: "din-condensed-web";
     letter-spacing: 1px;
     line-height: 26px;
