--- a/sass/_interact.scss
+++ b/sass/_interact.scss
@@ -23,7 +23,7 @@
 }
 
 .interact-blurb {
-    font-size: 22px;
+    font-size: 25px;
     font-family: "din-condensed-web";
     color: #F4B6A4;
     letter-spacing: 1px;
