--- a/sass/_splash.scss
+++ b/sass/_splash.scss
@@ -16,15 +16,15 @@
 .splash-icon {
     display: block;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 140px;
 }
 
 .splash-text {
     text-align: center;
-    margin-top: 60px;
+    margin-top: 140px;
     text-transform: uppercase;
     font-family: "din-condensed-web";
-    font-size: 21px;
+    font-size: 25px;
 }
 
 .splash-arrow {
