--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,8 +13,9 @@ body {
     font-family: "aktiv-grotesk";
 }
 
-a:link {
+a {
     color: white;
+    text-transform: uppercase;
 }
 
 a:hover {
